syntax = "proto3";

package iotfsdb.service.internal;

import "types.proto";

option java_package = "org.huebert.iotfsdb.api.grpc.proto.internal";
option java_outer_classname = "SeriesPersistenceServiceProto";

service SeriesPersistenceService {
  rpc DeleteSeries(DeleteSeriesRequest) returns (DeleteSeriesResponse);
  rpc GetSeries(GetSeriesRequest) returns (GetSeriesResponse);
  rpc SaveSeries(SaveSeriesRequest) returns (SaveSeriesResponse);
}

message DeleteSeriesRequest {
  string id = 1;
}

message GetSeriesRequest {

}

message SaveSeriesRequest {
  Series series = 1;
}

message DeleteSeriesResponse {
  Status status = 1;
}

message GetSeriesResponse {
  Status status = 1;
  repeated Series series = 2;
}

message SaveSeriesResponse {
  Status status = 1;
}
